--- a/.github/workflows/gh-pages-publish.yml
+++ b/.github/workflows/gh-pages-publish.yml
@@ -19,7 +19,7 @@ jobs:
       - run: npm run build
       - run: npm test
       - name: Deploy
-        uses: AdrySky/frontend-task-xsolla
+        uses: crazy-max/ghaction-github-pages@v1
         with: 
           target-branch: gh-pages
           build-dir: build
