--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Publish to gh-pages
+name: Deploy to gh-pages
 
 on:
   push:
@@ -6,19 +6,21 @@ on:
       - master
 
 jobs:
-  built-and-deploy:
+  built-test-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Set up Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
-          node-version: "14.18.1"
-      - run: npm install
-      - run: npm run build
+          node-version: ${{ matrix.node-version }}
+      - run: |
+          npm ci
+          npm run build --if-present
+          npm test
       - name: Deploy
-        uses: crazy-max/ghaction-github-pages@v1
+        uses: peaceiris/actions-gh-pages@v3
         with: 
           target-branch: gh-pages
           build-dir: build
