--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: |
-          npm ci
+          npm install
           npm run build --if-present
           npm test
       - name: Deploy
