--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: "14.x"
       - run: |
-          npm install
+          npm ci
           npm run build --if-present
           npm test
       - name: Deploy
