--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,9 @@ jobs:
           npm run build --if-present
           npm test
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with: 
-          target-branch: gh-pages
-          build-dir: build
-        env: 
-          GITHUB_TOKEN: ${{ secrets.TEST_REPO_TOKEN }}
+        - run : |
+            git config user.name github-actions
+            git config user.email github-actions@github.com
+            git --work-tree build add --all
+            git commit -m "Automatic Deploy action run by github-actions"
+            git push origin HEAD:gh-pages --force
