--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
           npm test
 
       - name: Deploy
-      - run : |
+        run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git --work-tree build add --all
